# diacritical-web

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
diacriticalweb/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
terms/: admin.py  models.py  tests.py  urls.py  views.py
terms/migrations/: 0001_initial.py  0002_rename_run_time_run_start_time.py  0003_finding_url.py  0004_finding_page_name.py  0005_run_secret.py  0005_run_secret_squashed_0008_alter_run_secret.py  0006_alter_run_secret_alter_run_start_time.py
terms/templates/terms/: index.html  run.html  term.html
