[project]
name = "diacritical-web"
version = "0.1.0"
description = "A web frontend for running diacritical"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.3",
    "django-types>=0.21.0",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
[tool.pyright]
# This is not a great approach, but it works for now.
venvPath = "/home/vscode/"
venv = ".venv"
